--- a/src/styles.css
+++ b/src/styles.css
@@ -2842,6 +2842,12 @@ body {
 .details__form-info {
   display: none;
 }
+.details__gallery-img{
+  width: 100%;
+  height: 13rem;
+  object-fit: cover;
+}
+
 @media (min-width: 992px) {
   .details__form-info {
     display: block;
