--- a/src/app/components/consulta/consulta.component.html
+++ b/src/app/components/consulta/consulta.component.html
@@ -284,7 +284,7 @@
             <div class="consulta__results-alohamiento-carrousel col-lg-4">
               <div [id]="'carousel' + i" class="carousel slide">
                 <div class="carousel-inner">
-                  <div *ngFor="let img of (images[i]?.[0] || []); let imgIndex = index" [class.active]="imgIndex === 0" class="carousel-item">
+                  <div *ngFor="let img of (images[(page - 1) * 5 + i]?.[0] || []); let imgIndex = index" [class.active]="imgIndex === 0" class="carousel-item">
                     <img [src]="img.url" class="d-block w-100 object-fit-cover" alt="Image {{img.id}}" class="carousel-img"/>
                   </div>
                 </div>
@@ -300,11 +300,10 @@
             </div>
             <div class="consulta__results-alohamiento-information col-lg-6">
               <div class="row">
-                <a (click)="selectAccoUnitId(item.id)" class="consulta__results-alohamiento-name">{{
-                  item.accommodation.name }}</a>
+                <a (click)="selectAccoUnitId(item.id)" class="consulta__results-alohamiento-name">{{ item.accommodation.name }}</a>
               </div>
               <div class="consulta__results-alohamiento-direction row">
-                <div>{{ item.accommodation.address }}</div>
+                <div>{{ item.accommodation.address }} - {{ item.accommodation.location }}</div>
               </div>
               <div class="consulta__results-alohamiento-description row mt-4">
                 <div>
@@ -312,8 +311,7 @@
                 </div>
               </div>
             </div>
-            <div
-              class="consulta__results-alohamiento-reserve col-lg-2 d-flex flex-column justify-content-between align-items-end">
+            <div class="consulta__results-alohamiento-reserve col-lg-2 d-flex flex-column justify-content-between align-items-end">
               <div class="consulta__results-alohamiento-people row text-end mt-2 mt-lg-0">
                 <div>{{ item.capacity }} personas</div>
               </div>
@@ -365,10 +363,9 @@
           </div>
         </div>
         <div class="d-flex justify-content-center mb-4" *ngIf="showRows">
-          <pagination-controls (pageChange)="page = $event" previousLabel="Anterior" nextLabel="Siguiente"
-              class="custom-pagination"></pagination-controls>
+          <pagination-controls (pageChange)="page = $event" previousLabel="Anterior" nextLabel="Siguiente" class="custom-pagination"></pagination-controls>
         </div>
-      </section>
+    </section>
     </div>
   </section>
 </main>
