Corrección ancho pantalla

--- a/src/app/components/consulta/consulta.component.html
+++ b/src/app/components/consulta/consulta.component.html
@@ -45,7 +45,7 @@
         <div class="consulta__form-filters-hidden collapse mt-2" id="desplegable">
           <div class="card-body">
             <div class="row my-4">
-              <div class="col-4">
+              <div class="col-md-4">
                 <div class="consulta__form-filters-title">
                   <div class="ms-1">Precio</div>
                 </div>
@@ -56,7 +56,7 @@
                     max="3000" [(ngModel)]="maxPrice" name="maxPrice" />
                 </div>
               </div>
-              <div class="col-4">
+              <div class="mt-4 col-md-4 mt-md-0">
                 <div class="consulta__form-filters-title">
                   <div class="ms-1">Servicios</div>
                 </div>
@@ -91,7 +91,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-4">
+              <div class="mt-4 col-md-4 mt-md-0">
                 <div class="consulta__form-filters-title">
                   <div class="ms-1">Categoría</div>
                 </div>
