--- a/src/styles.css
+++ b/src/styles.css
@@ -2202,6 +2202,7 @@ details {
 
 html {
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 *,
@@ -2218,6 +2219,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .header {
