--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -45,7 +45,7 @@
                     id="desplegable">
                     <div class="card-body">
                         <div class="row my-4">
-                            <div class="col-4">
+                            <div class="col-md-4">
                                 <div class="details__form-filters-title">
                                     <div class="ms-1">Precio</div>
                                 </div>
@@ -57,7 +57,7 @@
                                         id="rangoPrecio" min="1" max="3000" [(ngModel)]="maxPrice" name="maxPrice">
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="mt-4 col-md-4 mt-md-0">
                                 <div class="details__form-filters-title">
                                     <div class="ms-1">Servicios</div>
                                 </div>
@@ -96,7 +96,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="mt-4 col-md-4 mt-md-0">
                                 <div class="details__form-filters-title">
                                     <div class="ms-1">Categoría</div>
                                 </div>
