Corrección de detalles acco-unitComponent

--- a/src/app/components/admin/admin-acco-units/admin-acco-units.component.html
+++ b/src/app/components/admin/admin-acco-units/admin-acco-units.component.html
@@ -188,7 +188,7 @@
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <div class="admin__modal-create-title mb-3 mt-3">Nuevo alojamiento</div>
+                            <div class="admin__modal-create-title mb-3 mt-3">Nueva unidad</div>
                             <form class="admin__modal-create-form needs-validation" novalidate
                                 [formGroup]="adminAccoUnitsForm">
                                 <div class="admin__modal-create-form-input mb-3">
@@ -256,7 +256,7 @@
                                     <div class="admin__modal-create-form-buttons mb-3 row ">
                                         <button type="button"
                                             class="admin__modal-create-form-submit btn btn-outline-secondary col-md-5"
-                                            (click)="createAccoUnit()">Crear alojamiento</button>
+                                            (click)="createAccoUnit()">Crear unidad</button>
                                         <button type="button"
                                             class="admin__modal-create-form-cancel btn btn-secondary col-md-5 offset-md-2 mt-2 mt-md-0"
                                             data-bs-dismiss="modal">Cancelar</button>
@@ -271,7 +271,7 @@
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <div class="admin__modal-edit-title mb-3 mt-3">Modificación de alojamiento</div>
+                            <div class="admin__modal-edit-title mb-3 mt-3">Modificación de unidad</div>
                             <form class="admin__modal-edit-form needs-validation" novalidate
                                 [formGroup]="adminAccoUnitsEditForm">
                                 <div class="admin__modal-create-form-input mb-3">
@@ -362,7 +362,7 @@
                                     <path
                                         d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5m.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
                                 </svg>
-                                La supresión de un alojamiento es irreversible
+                                La supresión de una unidad es irreversible
                             </div>
                             <div class="text-message my-4 text-center">{{adminAccoUnitsError}}</div>
                             <div class="container-xl">
